Домашнее задание к лекции 18 (issue #17) отработка замечаний